--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-spring.freemarker.charset=UTF-8
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123456
 #使?阿?巴巴druid数据源，默认使??带的
@@ -10,7 +9,7 @@ mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 # mybatis 下划线转驼峰配置,两者都可以
 #mybatis.configuration.mapUnderscoreToCamelCase=true
 mybatis.configuration.map-underscore-to-camel-case=true
-配置扫描
+#配置扫描
 mybatis.mapper-locations=classpath:mapper/*.xml
-配置xml的结果别名
+#配置xml的结果别名
 mybatis.type-aliases-package=com.cyf.project01.domain
